--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev" :"nodemon src/app.js",
+    "dev": "nodemon src/app.js",
     "test": "jest"
   },
   "author": "Adarsha",
@@ -15,6 +15,7 @@
     "javascript"
   ],
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongoose": "^8.12.1"
   }
 }
